src/kcmkwin/kwinrules/rulebookmodel.h
@@ -42,6 +42,8 @@ public:
     void load();
     void save();
 
+    QModelIndex findRuleWithProperties(const QVariantMap &info, bool wholeApp) const;
+
 private:
     RuleBookSettings *m_ruleBook;
     QVector<Rules *> m_rules;
