src/kcmkwin/kwinrules/package/contents/ui/RulesEditor.qml
@@ -16,9 +16,7 @@ import org.kde.kcms.kwinrules 1.0
 ScrollViewKCM {
     id: rulesEditor
 
-    property var rulesModel: kcm.rulesModel
-
-    title: rulesModel.description
+    title: kcm.rulesModel.description
 
     view: ListView {
         id: rulesView
@@ -73,7 +71,7 @@ ScrollViewKCM {
         visible: warningList.count > 0
         Repeater {
             id: warningList
-            model: rulesModel.warningMessages
+            model: kcm.rulesModel.warningMessages
 
             delegate: Kirigami.InlineMessage {
                 text: modelData
@@ -104,8 +102,8 @@ ScrollViewKCM {
             enabled: !propertySheet.sheetOpen && !errorSheet.sheetOpen
             onClicked: {
                 overlayModel.onlySuggestions = true;
-                rulesModel.detectWindowProperties(Math.max(delaySpin.value * 1000,
-                                                           Kirigami.Units.shortDuration));
+                kcm.rulesModel.detectWindowProperties(Math.max(delaySpin.value * 1000,
+                                                               Kirigami.Units.shortDuration));
             }
         }
         QQC2.SpinBox {
@@ -123,7 +121,7 @@ ScrollViewKCM {
     }
 
     Connections {
-        target: rulesModel
+        target: kcm.rulesModel
         function onShowSuggestions() {
             overlayModel.onlySuggestions = true;
             propertySheet.sheetOpen = true;
@@ -268,7 +266,7 @@ ScrollViewKCM {
 
     KSortFilterProxyModel {
         id: enabledRulesModel
-        sourceModel: rulesModel
+        sourceModel: kcm.rulesModel
         filterRowCallback: (source_row, source_parent) => {
             var index = sourceModel.index(source_row, 0, source_parent);
             return sourceModel.data(index, RulesModel.EnabledRole);
@@ -277,7 +275,7 @@ ScrollViewKCM {
 
     KSortFilterProxyModel {
         id: overlayModel
-        sourceModel: rulesModel
+        sourceModel: kcm.rulesModel
 
         property bool onlySuggestions: false
         onOnlySuggestionsChanged: {
